[project]
name = "evana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langgraph-supervisor",
    "langchain-tavily",
    "langchain[openai]",
    "langchain[ollama]",
    "langgraph-cli[inmem]",
    "transformers",
    "accelerate",
    "scipy",
]
